[package]
name = "rust-scvi"
version = "0.1.0"
edition = "2021"
default-run = "vae-zinb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tch = { version = "0.11.0", path = "../tch2-rs" }
memmap = "*"
clap = {version = "*", features = ["derive"]}
log = "*"
env_logger = "*"
itertools = "*"
