[package]
name = "scavenger"
version = "0.1.0"
edition = "2021"
default-run = "csr-vae-zinb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tch = "0.13.0"
memmap = "*"
clap = {version = "*", features = ["derive"]}
log = "*"
env_logger = "*"
itertools = "*"
